# Zia

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  MergeRule.txt  README.md  clean.sh  codingstyle.txt  committemplate.txt  conanfile.txt  input.txt  sonar-project.properties
.circleci/: conan.sh  config.yml
DiagramsAPI/: diagramSequenceAPI.drawio  diagramSequenceThreadModuleManager.drawio
Module/: AModule.hpp  CMakeLists.txt  Exporter.hpp  IHooks.hpp  IModule.hpp
Module/SSL/: CMakeLists.txt  SSLModule.cpp  SSLModule.hpp  certificate.p12  certificate.pem  key.pem  utils.txt
NetworkWrapper/: HttpMessage.cpp  HttpMessage.hpp  NetworkWrapper.cpp  NetworkWrapper.hpp  ServerSocket.cpp  ServerSocket.hpp  Socket.cpp  Socket.hpp
htdocs/: auth.html  connexion_server.php  event_listener.html  general_kenobi.html  index.html  recursion.html
script/: auto.bat  auto.sh  auto_test.sh
test/: CMakeLists.txt  loggerTest.cpp  main.cpp
test/dlsym-wrapper-tests/: dlsym-wrapper-tests-lib.cpp  dlsym-wrapper-tests-stress.cpp  dlsym-wrapper-tests-works.cpp
test/parser-tests/: example.ini  example.json  parsing-tests.cpp
testing_files/: CMakeLists.txt  dlopen_rtype_florian_lavabre.cpp  dlopen_rtype_florian_lavabre.hpp  getprocaddress_rtype_florian_lavabre.cpp  getprocaddress_rtype_florian_lavabre.hpp
zia/: CMakeLists.txt  main.cpp
zia/Http/: CMakeLists.txt
zia/Http/include/: HttpRequest.hpp  HttpResponse.hpp
zia/Http/src/: HttpRequest.cpp  HttpResponse.cpp
zia/Log/: CMakeLists.txt
zia/Log/include/: Log.h  Log.hpp
zia/Log/src/: Log.cpp
zia/NetworkWrapper/: CMakeLists.txt
zia/NetworkWrapper/include/: PollWrap.hpp  Socket.hpp
zia/NetworkWrapper/src/: PollWrap.cpp  Socket.cpp
zia/UriParser/: CMakeLists.txt
zia/UriParser/NetworkWrapper/: CMakeLists.txt
zia/UriParser/NetworkWrapper/src/: Socket.cpp
zia/UriParser/include/: UriParser.cpp  UriParser.hpp
zia/UriParser/src/: UriParser.cpp
zia/dslym-wrapper/: CMakeLists.txt  main.cpp
zia/dslym-wrapper/include/: DLSymWrapper.hpp
zia/dslym-wrapper/src/: DLSymWrapper.cpp
zia/include/: Buffer.hpp  Buffer.tpp  Parser.hpp  ZiaExceptions.hpp
zia/iniparser/: CMakeLists.txt
zia/src/: Parser.cpp  zia.cpp
ziaMocApi/: CMakeLists.txt  IModule.hpp  Storage.hpp  auto.sh  conanfile.txt  createUml.py  main.cpp
ziaMocApi/CommonHeaders/: IModule.hpp  ModuleManager.hpp  Storage.hpp  api.hpp
ziaMocApi/MocImplementation/: Mediator.cpp  ModuleManager.cpp
ziaMocApi/UML/: sharedHeaders.puml
