if (${UNIX})
    list(APPEND HPPS_ENTITIES ${CMAKE_CURRENT_LIST_DIR}/CallAPI.hpp)
    list(APPEND SOURCES_ENTITIES ${CMAKE_CURRENT_LIST_DIR}/CallAPI.cpp)
endif()

if (${WIN32})
    list(APPEND HPPS_ENTITIES ${CMAKE_CURRENT_LIST_DIR}/CallAPIWin.hpp)
    list(APPEND SOURCES_ENTITIES ${CMAKE_CURRENT_LIST_DIR}/CallAPIWin.cpp)
endif()

list(APPEND HPPS_ENTITIES
${CMAKE_CURRENT_LIST_DIR}/AEntities.hpp
${CMAKE_CURRENT_LIST_DIR}/AGraphicalEntities.hpp
${CMAKE_CURRENT_LIST_DIR}/ALogicalEntities.hpp
${CMAKE_CURRENT_LIST_DIR}/Collision.hpp
${CMAKE_CURRENT_LIST_DIR}/DynamicLoader.hpp
${CMAKE_CURRENT_LIST_DIR}/Factory.hpp
${CMAKE_CURRENT_LIST_DIR}/Ientities.hpp
${CMAKE_CURRENT_LIST_DIR}/Missile.hpp
${CMAKE_CURRENT_LIST_DIR}/Monster.hpp
${CMAKE_CURRENT_LIST_DIR}/Player.hpp
${CMAKE_CURRENT_LIST_DIR}/Wall.hpp
${CMAKE_CURRENT_LIST_DIR}/WinMacros.hpp
${CMAKE_CURRENT_LIST_DIR}/Map.hpp
)

list(APPEND SOURCES_ENTITIES
${CMAKE_CURRENT_LIST_DIR}/AEntities.cpp
${CMAKE_CURRENT_LIST_DIR}/AGraphicalEntities.cpp
${CMAKE_CURRENT_LIST_DIR}/ALogicalEntities.cpp
${CMAKE_CURRENT_LIST_DIR}/Collision.cpp
${CMAKE_CURRENT_LIST_DIR}/Factory.cpp
${CMAKE_CURRENT_LIST_DIR}/Missile.cpp
${CMAKE_CURRENT_LIST_DIR}/Monster.cpp
${CMAKE_CURRENT_LIST_DIR}/Player.cpp
${CMAKE_CURRENT_LIST_DIR}/Wall.cpp
${CMAKE_CURRENT_LIST_DIR}/Map.cpp
)
set(ENGINEHEADERS ${HPPS_ENTITIES})
add_library(GameEngine SHARED ${HPPS_ENTITIES} ${SOURCES_ENTITIES} ${WRAPPER})
set_target_properties(GameEngine PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Ressources/GameEngineLibrarie)
include(${CMAKE_CURRENT_LIST_DIR}/extern_vals/CMakeLists.txt)
